# socks-chain

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  resource.rc
src/widgets/: MainFrame.cpp  MainFrame.hpp  WindowID.hpp
